# sleeper-cinema

./: .gitignore  Data_Processing.ipynb  README.md  enhanced_box_office_data(2000-2024).csv  graph.py  graph_algorithms.py  movie_graph-All, threshold adjustment.pkl  movie_graph-All.pkl  movie_graph-GJ60-PCA10-PCB90-LB80-Y5.pkl  movie_graph-GJ60-PCA10-PCB95-LB80-Y5.pkl  movie_graph-GenreJ60-Year3-Budget80.pkl  movie_graph-GenreJ60-Year4-Budget70.pkl  movie_graph-GenreJ60-Year5-Budget65.pkl  movie_graph-GenreJ60-Year5-Budget75.pkl  movie_graph-HAMMING-95.pkl  processed_movie_data.csv  pyproject.toml  requirements.txt
Notes/: anomaly_detection.md
artifacts/: crf_ranked.csv
config/: model.yaml
graphs/: movie_graph-2.pkl  movie_graph-BEST-GenreJ60-Year2-CompaniesH10.pkl  movie_graph-Best-with-budget.pkl  movie_graph-GJ60-PCA10-Y3-OLD.pkl  movie_graph-GJ60-PCA50-PCB50-LB80-Y4.pkl  movie_graph-GJ60-PCA50-PCB50-LB85-Y3.pkl  movie_graph-GenreJ60-Year3-Budget75.pkl  movie_graph-HAMMING-90.pkl  movie_graph-JACCARD-60.pkl  movie_graph.pkl
src/: evaluate.py  gnc.py  model.py  outlier_generator.py  success_criteria.py  train.py  utils.py
src/evals/ggad/: train.py
tests/: test_anomaly_model.py
